<resources>
    <string name="app_name">Timer</string>
    <string name="bottom_nav_plan">计划</string>
    <string name="bottom_nav_habit">习惯</string>
    <string name="bottom_nav_statistic">统计</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Finish">完成</string>
    <string name="ContentHint">完成了什么任务？</string>
    <string name="Theme">主题</string>
    <string name="type">类型</string>
    <string name="repeat">重复</string>
    <string name="hyper">高级(可选)</string>
    <string name="Sun">日</string>
    <string name="Mon">一</string>
    <string name="The">二</string>
    <string name="Wed">三</string>
    <string name="Thu">四</string>
    <string name="Fri">五</string>
    <string name="Sat">六</string>
    <string name="EndTime">结束时间</string>
    <string name="StartTime">开始时间</string>
    <string name="Regular_alarm">定时提醒</string>
    <string name="Priority">优先级</string>
</resources>
