<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecallActivity">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/cl"
        android:orientation="vertical"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.appbar.AppBarLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_marginHorizontal="16dp"
                android:id="@+id/form"
                android:layout_marginTop="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/ed_content"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="@null"
                    android:enabled="true"
                    android:textSize="14sp"
                    android:hint="@string/ContentHint"
                    android:textCursorDrawable="@color/iconSelected"
                    />
                <TextView
                    android:text="@string/Theme"
                    android:id="@+id/theme"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_height="36dp"
                    android:layout_below="@id/ed_content"
                    android:layout_width="wrap_content"
                    />
                <TextView
                    android:text="@string/StartTime"
                    android:id="@+id/start_t"
                    android:textSize="14sp"
                    android:layout_below="@+id/theme"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="36dp"/>
                <TextView
                    android:id="@+id/end_t"
                    android:textSize="14sp"
                    android:text="@string/EndTime"
                    android:layout_below="@id/start_t"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="36dp"/>

                <Spinner
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:background="@mipmap/into"
                    android:layout_below="@id/ed_content"
                    android:layout_alignParentRight="true"
                    android:id="@+id/theme_sp"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentEnd="true" />

                <Spinner
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:background="@mipmap/into"
                    android:id="@+id/start_sp"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_below="@id/theme_sp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp" />

                <Spinner
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:background="@mipmap/into"
                    android:id="@+id/end_sp"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_below="@id/start_sp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp" />

                <View
                    android:background="@color/divider"
                    android:layout_below="@id/ed_content"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />
                <View
                    android:background="@color/divider"
                    android:layout_below="@id/theme"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />
                <View
                    android:background="@color/divider"
                    android:layout_below="@id/start_t"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

            </RelativeLayout>

        </RelativeLayout>


        <Button
            android:text="@string/Finish"
            android:id="@+id/bt_ok"
            android:textColor="@color/iconSelected"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/button_r"
            />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:theme="@style/AppTheme"
            app:title="记录回溯"

            app:titleTextColor="@color/colorText" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>